# malscan

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: memory_scanner.h  python_plugin.h  utils.h  yarapp.h
libyara/: libyara32.lib
malscan/: CMakeLists.txt  malscan.cpp  malscan.h  memory_scanner.cpp  python_plugin.cpp  utils.cpp  yarapp.cpp  yarapp.h
yarapp/: CMakeLists.txt  yarapp.cpp
