# CMakeList.txt: CMake-Projekt für "malscan". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.8)

# Fügen Sie der ausführbaren Datei für dieses Projekt eine Quelle hinzu.
add_executable (malscan "malscan.cpp" "malscan.h")

# TODO: Fügen Sie bei Bedarf Tests und Installationsziele hinzu.
